--- a/index.html
+++ b/index.html
@@ -4,5 +4,5 @@
         <meta charset="UTF-8">
             <title>应用名称</title>
     </head>
-    <a style="text-align:center" href="itms-services://?action=download-manifest&url=https://gitee.com/jinweizhao/theWell/raw/master/manifest.plist">点我下载按钮</a>
+    <a style="text-align:center" href="itms-services://?action=download-manifest&url=https://raw.githubusercontent.com/jinweizhao/TheWell/master/manifest.plist">点我下载按钮</a>
 </html>
