--- a/index.html
+++ b/index.html
@@ -1,8 +1,14 @@
-<!doctype html>
-<html>
-    <head>
-        <meta charset="UTF-8">
-            <title>应用名称</title>
-    </head>
-    <a style="text-align:center" href="itms-services://?action=download-manifest&url=https://raw.githubusercontent.com/jinweizhao/TheWell/master/manifest.plist">点我下载按钮</a>
+
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+
+<body style="text-align:center">
+    <a href="itms-services://?action=download-manifest&url=https://raw.githubusercontent.com/jinweizhao/TheWell/master/manifest.plist">点我下载TheWell</a>
+</body>
 </html>
