--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
 </head>
 
 <body style="text-align:center">
-    <a href="itms-services://?action=download-manifest&url=https://raw.githubusercontent.com/jinweizhao/Apps/master/TheWell/manifest.plist">点我下载TheWell</a>
+    <a href="itms-services://?action=download-manifest&url=https://raw.githubusercontent.com/jinweizhao/Apps/master/Demo/manifest.plist">点我下载</a>
 </body>
 </html>
